# Pixieology

./: .gitignore  JINN_OR_BEAST_PAPER_NOTES.md  README.md  SVP Abstract - Jinn or Beast.md  build_bonsai_adapter_vpd_trace.py  build_bonsai_mechinterp_atlas.py  build_faebench_env.py  build_godel_vpd_trace.py  build_legacy_artifact_bundle.py  build_pixie_chronicle_sft_env.py  build_pixie_fae_loop_env.py  build_pixie_moral_recursion_sft_env.py  build_pixie_skill_sheet.py  build_pixie_storyworld_sft_env.py  build_pixie_v2_model.py  build_pixue_soul_env.py  build_reflective_buddy_experiment.py  claude_hhh_constitution.md  continue_pixie_adapter_from_checkpoint.py  diagnostics_pixie.py  extract_1.7b_vector.py  fae_constitution_seed.jsonl  fae_kawaii_seed.jsonl  fae_steering_vector.npy  fae_steering_vector_1.7b.npy  fae_tax_epistemics.py  fae_world_constitution.md  fae_world_model_manifest.json  generate_fae_kawaii_seed.py  generate_multi_seed.py  generate_reflective_buddy_distill.py  meek_kawaii_constitution.md  multi_persona_loop.py  multi_persona_seed.jsonl  overnight_pixie_loop.py  patch_config_flat.py  pixie_compare_800m_1700m.py  pixie_dictionary_sae_overnight.py  pixie_env.py  pixie_eval_1.7b.py  (+22 more)
experiments/bonsai_1p7b_q1_lora_feasibility/: .env.local.example  .gitignore  FEASIBILITY_REPORT.md  Makefile  README.md  pyproject.toml
experiments/bonsai_1p7b_q1_lora_feasibility/configs/: smoke_4gb.yaml  smoke_6gb.yaml  smoke_8gb.yaml  smoke_auto.yaml
experiments/bonsai_1p7b_q1_lora_feasibility/data/: smoke_eval.jsonl  smoke_train.jsonl
experiments/bonsai_1p7b_q1_lora_feasibility/scripts/: bootstrap.ps1  bootstrap.sh  (+4 more)
(+386 files in other folders)
