[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixie-bonsai-feasibility"
version = "0.1.0"
description = "Local, capped Bonsai-1.7B QLoRA to GGUF-LoRA feasibility harness"
requires-python = ">=3.11,<3.12"
dependencies = [
  "accelerate==1.12.0",
  "bitsandbytes==0.49.1",
  "huggingface-hub>=0.36,<2",
  "peft==0.11.1",
  "PyYAML==6.0.3",
  "safetensors==0.8.0",
  "torch==2.5.1",
  "transformers==5.3.0",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[project.scripts]
pixie-bonsai = "pixie_bonsai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "gpu: requires an NVIDIA CUDA GPU and downloaded model files",
  "integration: performs model conversion or inference",
]

